Cover the case when cell type contains a forward slash